--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ieee-eureka-quiz",
+  "name": "ieee-eureka-22",
   "version": "1.0.0",
   "description": "a_try_@_something",
   "main": "app.js",
