--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ieee-eureka-22",
   "version": "1.0.0",
-  "description": "a_try_@_something",
+  "description": "Node(Ejs) Based CTF type platform for hosting IEEE-NITK's Eureka 2022 final event.",
   "main": "app.js",
   "dependencies": {
     "connect-flash": "^0.1.1",
@@ -23,6 +23,7 @@
   },
   "devDependencies": {},
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
